--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html>
 
   <head>
-    <title>Hello Nikita</title>
+    <title>Hello Nikita Kothari</title>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="stylesheets/style.css">
@@ -15,7 +15,7 @@
           <img class = "newappIcon" src="images/newapp-icon.png">
         </td>
         <td>
-          <h1>Hello Nikita!</h1>
+          <h1>Hello Nikita Kothari!</h1>
         </td>
       </tr>
     </table>
